--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,6 @@
     "transform-object-assign",
      "syntax-dynamic-import",
     "transform-object-rest-spread",
-    ["import", { libraryName: "antd", style: "css" }]],
+    ["import", { "libraryName": "antd", "style": "css" }]],
   "comments": false
 }
